[package]
name = "psql_stats"
authors = ["Christian Torralba <torral2@pdx.edu>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = {version = "0.19.5", features = ["with-serde_json-1"] }
sqlx-postgres = "0.7.0-alpha.3"
serde_json = "1.0.96"
serde = "1.0"
clap = { version = "4.2.7", features = ["derive"] }
thiserror = "1.0.40"
colored = "2.0.0"

[mod]
name = "psql_stats"

[[bin]]
name = "psql_stats"
